<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.roosi.done.done.MainActivity" >

    <item android:id="@+id/action_add_task"
        android:title="@string/action_add_task"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always" />

    <item android:id="@+id/action_create_task_list"
        android:title="@string/action_create_task_list"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_delete_task_list"
        android:title="@string/action_delete_task_list"
        android:orderInCategory="101"
        android:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        android:orderInCategory="102"
        android:showAsAction="never" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="103"
        android:showAsAction="never" />
</menu>
